Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDLParser.java
// $ANTLR 3.1 /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g 2008-11-04 15:53:31

/*
Copyright (C) 2008 Luís Reis<luiscubal@gmail.com>
Copyright (C) 2008 Serge Humphrey <bob@bobtheblueberry.com>

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
*/
package org.gcreator.pinedl;

import java.util.Vector;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class PineDLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "MULT", "DIV", "MOD", "LPAREN", "RPAREN", "LARRAY", "RARRAY", "BBLOCK", "EBLOCK", "BTWAND", "BTWOR", "BTWXOR", "LOGAND", "LOGOR", "STMTCUT", "DBLDOT", "BTWNOT", "LOGNOT", "INC", "DEC", "EQ", "CEQ", "NEQ", "BG", "BGE", "LT", "LTE", "WORD", "PRIVACY", "THIS", "SUPER", "NULL", "BOOLEAN", "STRING", "CHAR", "FLOAT", "DOUBLE", "INTEGER", "ALPHA", "DIGIT", "SLCOMMENT", "MLCOMMENT", "WHITESPACE", "'package'", "'import'", "'class'", "'extends'", "'static'", "','", "'return'", "'throw'", "'try'", "'catch'", "'if'", "'elsif'", "'else'", "'while'", "'.'", "'int'", "'float'", "'double'", "'uint'", "'char'", "'string'", "'bool'"
    };
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int DEC=25;
    public static final int T__66=66;
    public static final int LT=31;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int RARRAY=12;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int MOD=8;
    public static final int BTWOR=16;
    public static final int CHAR=40;
    public static final int SLCOMMENT=46;
    public static final int BTWNOT=22;
    public static final int FLOAT=41;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int EOF=-1;
    public static final int LTE=32;
    public static final int BTWXOR=17;
    public static final int PRIVACY=34;
    public static final int BTWAND=15;
    public static final int LPAREN=9;
    public static final int WORD=33;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int INC=24;
    public static final int T__57=57;
    public static final int RPAREN=10;
    public static final int T__58=58;
    public static final int BOOLEAN=38;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int DBLDOT=21;
    public static final int T__59=59;
    public static final int THIS=35;
    public static final int DOUBLE=42;
    public static final int PLUS=4;
    public static final int DIGIT=45;
    public static final int SUPER=36;
    public static final int EQ=26;
    public static final int BGE=30;
    public static final int T__50=50;
    public static final int MLCOMMENT=47;
    public static final int INTEGER=43;
    public static final int LARRAY=11;
    public static final int STMTCUT=20;
    public static final int T__49=49;
    public static final int LOGAND=18;
    public static final int NULL=37;
    public static final int LOGOR=19;
    public static final int BG=29;
    public static final int WHITESPACE=48;
    public static final int MINUS=5;
    public static final int MULT=6;
    public static final int ALPHA=44;
    public static final int NEQ=28;
    public static final int T__70=70;
    public static final int CEQ=27;
    public static final int DIV=7;
    public static final int BBLOCK=13;
    public static final int EBLOCK=14;
    public static final int STRING=39;
    public static final int LOGNOT=23;

    // delegates
    // delegators


        public PineDLParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PineDLParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return PineDLParser.tokenNames; }
    public String getGrammarFileName() { return "/home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g"; }


    	private SignalReceiver signal = new SignalReceiver(); //Empty signal receiver
    	
    	public void setSignalReceiver(SignalReceiver signal){
    		this.signal = signal;
    		if(signal==null)
    			this.signal = new SignalReceiver(); //Prevent NullPointerExceptions
    	}
    	
    	public SignalReceiver getSignalReceiver(){
    		return signal;
    	}



    // $ANTLR start "doc"
    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:107:1: doc : pkgstmt ( impstmt )* clsstmt ;
    public final void doc() throws RecognitionException {
        try {
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:107:5: ( pkgstmt ( impstmt )* clsstmt )
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:107:7: pkgstmt ( impstmt )* clsstmt
            {
            pushFollow(FOLLOW_pkgstmt_in_doc278);
            pkgstmt();

            state._fsp--;
            if (state.failed) return ;
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:108:3: ( impstmt )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==50) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:0:0: impstmt
            	    {
            	    pushFollow(FOLLOW_impstmt_in_doc282);
            	    impstmt();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            pushFollow(FOLLOW_clsstmt_in_doc287);
            clsstmt();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "doc"


    // $ANTLR start "pkgstmt"
    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:111:1: pkgstmt : 'package' c= context STMTCUT ;
    public final void pkgstmt() throws RecognitionException {
        String c = null;


        try {
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:112:2: ( 'package' c= context STMTCUT )
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:112:4: 'package' c= context STMTCUT
            {
            match(input,49,FOLLOW_49_in_pkgstmt296); if (state.failed) return ;
            pushFollow(FOLLOW_context_in_pkgstmt300);
            c=context();

            state._fsp--;
            if (state.failed) return ;
            if ( state.backtracking==0 ) {
              signal.sendPackageSignal(c);
            }
            match(input,STMTCUT,FOLLOW_STMTCUT_in_pkgstmt304); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "pkgstmt"


    // $ANTLR start "impstmt"
    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:113:1: impstmt : 'import' c= context STMTCUT ;
    public final void impstmt() throws RecognitionException {
        String c = null;


        try {
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:113:9: ( 'import' c= context STMTCUT )
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:113:11: 'import' c= context STMTCUT
            {
            match(input,50,FOLLOW_50_in_impstmt311); if (state.failed) return ;
            pushFollow(FOLLOW_context_in_impstmt315);
            c=context();

            state._fsp--;
            if (state.failed) return ;
            if ( state.backtracking==0 ) {
              signal.sendImportSignal(c);
            }
            match(input,STMTCUT,FOLLOW_STMTCUT_in_impstmt319); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "impstmt"


    // $ANTLR start "clsstmt"
    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:115:1: clsstmt : 'class' c= WORD ( 'extends' d= context ) BBLOCK classcontent EBLOCK ;
    public final void clsstmt() throws RecognitionException {
        Token c=null;
        String d = null;


        String cls = ""; String baseclass = null;
        try {
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:116:2: ( 'class' c= WORD ( 'extends' d= context ) BBLOCK classcontent EBLOCK )
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:116:4: 'class' c= WORD ( 'extends' d= context ) BBLOCK classcontent EBLOCK
            {
            match(input,51,FOLLOW_51_in_clsstmt332); if (state.failed) return ;
            c=(Token)match(input,WORD,FOLLOW_WORD_in_clsstmt336); if (state.failed) return ;
            if ( state.backtracking==0 ) {
              cls=c.getText();
            }
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:116:38: ( 'extends' d= context )
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:116:39: 'extends' d= context
            {
            match(input,52,FOLLOW_52_in_clsstmt341); if (state.failed) return ;
            pushFollow(FOLLOW_context_in_clsstmt345);
            d=context();

            state._fsp--;
            if (state.failed) return ;
            if ( state.backtracking==0 ) {
              baseclass=d;
            }

            }

            if ( state.backtracking==0 ) {
              signal.sendClassDeclaration(cls, baseclass);
            }
            match(input,BBLOCK,FOLLOW_BBLOCK_in_clsstmt356); if (state.failed) return ;
            pushFollow(FOLLOW_classcontent_in_clsstmt361);
            classcontent();

            state._fsp--;
            if (state.failed) return ;
            match(input,EBLOCK,FOLLOW_EBLOCK_in_clsstmt365); if (state.failed) return ;
            if ( state.backtracking==0 ) {
              signal.endClass();
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "clsstmt"


    // $ANTLR start "classcontent"
    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:123:1: classcontent : ( element )* ;
    public final void classcontent() throws RecognitionException {
        try {
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:124:2: ( ( element )* )
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:124:4: ( element )*
            {
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:124:4: ( element )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==PRIVACY) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:0:0: element
            	    {
            	    pushFollow(FOLLOW_element_in_classcontent380);
            	    element();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "classcontent"


    // $ANTLR start "element"
    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:126:1: element : ( method | field | constructor );
    public final void element() throws RecognitionException {
        try {
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:126:9: ( method | field | constructor )
            int alt3=3;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:126:11: method
                    {
                    pushFollow(FOLLOW_method_in_element390);
                    method();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:126:18: field
                    {
                    pushFollow(FOLLOW_field_in_element392);
                    field();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 3 :
                    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:126:24: constructor
                    {
                    pushFollow(FOLLOW_constructor_in_element394);
                    constructor();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "element"


    // $ANTLR start "field"
    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:128:1: field : a= PRIVACY (s= 'static' )? d= type n= WORD STMTCUT ;
    public final void field() throws RecognitionException {
        Token a=null;
        Token s=null;
        Token n=null;
        String d = null;



        String privacy = null;
        boolean isstatic = false;
        boolean isconst = false;
        String type = "";

        try {
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:134:3: (a= PRIVACY (s= 'static' )? d= type n= WORD STMTCUT )
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:135:2: a= PRIVACY (s= 'static' )? d= type n= WORD STMTCUT
            {
            a=(Token)match(input,PRIVACY,FOLLOW_PRIVACY_in_field410); if (state.failed) return ;
            if ( state.backtracking==0 ) {
              privacy=a.getText();
            }
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:136:3: (s= 'static' )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==53) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:0:0: s= 'static'
                    {
                    s=(Token)match(input,53,FOLLOW_53_in_field417); if (state.failed) return ;

                    }
                    break;

            }

            if ( state.backtracking==0 ) {
              if(s!=null) isstatic = true;
            }
            pushFollow(FOLLOW_type_in_field428);
            d=type();

            state._fsp--;
            if (state.failed) return ;
            if ( state.backtracking==0 ) {
              type = d;
            }
            n=(Token)match(input,WORD,FOLLOW_WORD_in_field435); if (state.failed) return ;
            if ( state.backtracking==0 ) {
              signal.sendFieldSignal(privacy, isstatic, isconst, type, n.getText());
            }
            match(input,STMTCUT,FOLLOW_STMTCUT_in_field440); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "field"


    // $ANTLR start "method"
    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:142:1: method : p= PRIVACY (s= 'static' )? t= type n= WORD LPAREN (a= argument ( ',' b= argument )* )? RPAREN BBLOCK code EBLOCK ;
    public final void method() throws RecognitionException {
        Token p=null;
        Token s=null;
        Token n=null;
        String t = null;

        Argument a = null;

        Argument b = null;



        String privacy = null;
        boolean isstatic = false;
        String type = "";
        String name = "";
        Vector<Argument> args = new Vector<Argument>();

        try {
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:149:3: (p= PRIVACY (s= 'static' )? t= type n= WORD LPAREN (a= argument ( ',' b= argument )* )? RPAREN BBLOCK code EBLOCK )
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:149:5: p= PRIVACY (s= 'static' )? t= type n= WORD LPAREN (a= argument ( ',' b= argument )* )? RPAREN BBLOCK code EBLOCK
            {
            p=(Token)match(input,PRIVACY,FOLLOW_PRIVACY_in_method454); if (state.failed) return ;
            if ( state.backtracking==0 ) {
              privacy=p.getText();
            }
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:150:3: (s= 'static' )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==53) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:150:4: s= 'static'
                    {
                    s=(Token)match(input,53,FOLLOW_53_in_method463); if (state.failed) return ;
                    if ( state.backtracking==0 ) {
                      isstatic = true;
                    }

                    }
                    break;

            }

            pushFollow(FOLLOW_type_in_method473);
            t=type();

            state._fsp--;
            if (state.failed) return ;
            if ( state.backtracking==0 ) {
              type=t;
            }
            n=(Token)match(input,WORD,FOLLOW_WORD_in_method481); if (state.failed) return ;
            if ( state.backtracking==0 ) {
              name=n.getText();
            }
            match(input,LPAREN,FOLLOW_LPAREN_in_method487); if (state.failed) return ;
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:153:10: (a= argument ( ',' b= argument )* )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==WORD||(LA7_0>=64 && LA7_0<=70)) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:153:11: a= argument ( ',' b= argument )*
                    {
                    pushFollow(FOLLOW_argument_in_method492);
                    a=argument();

                    state._fsp--;
                    if (state.failed) return ;
                    if ( state.backtracking==0 ) {
                      args.add(a);
                    }
                    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:153:37: ( ',' b= argument )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==54) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:153:38: ',' b= argument
                    	    {
                    	    match(input,54,FOLLOW_54_in_method497); if (state.failed) return ;
                    	    pushFollow(FOLLOW_argument_in_method501);
                    	    b=argument();

                    	    state._fsp--;
                    	    if (state.failed) return ;
                    	    if ( state.backtracking==0 ) {
                    	      args.add(b);
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);


                    }
                    break;

            }

            match(input,RPAREN,FOLLOW_RPAREN_in_method509); if (state.failed) return ;
            if ( state.backtracking==0 ) {
              signal.sendMethodSignal(privacy, isstatic, type, name, args); 
            }
            match(input,BBLOCK,FOLLOW_BBLOCK_in_method517); if (state.failed) return ;
            pushFollow(FOLLOW_code_in_method522);
            code();

            state._fsp--;
            if (state.failed) return ;
            match(input,EBLOCK,FOLLOW_EBLOCK_in_method526); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "method"


    // $ANTLR start "constructor"
    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:159:1: constructor : PRIVACY THIS LPAREN ( argument ( ',' argument )* )? RPAREN ( DBLDOT ( THIS | SUPER ) LPAREN ( WORD ( ',' WORD )* )? RPAREN )? BBLOCK code EBLOCK ;
    public final void constructor() throws RecognitionException {
        try {
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:160:2: ( PRIVACY THIS LPAREN ( argument ( ',' argument )* )? RPAREN ( DBLDOT ( THIS | SUPER ) LPAREN ( WORD ( ',' WORD )* )? RPAREN )? BBLOCK code EBLOCK )
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:160:4: PRIVACY THIS LPAREN ( argument ( ',' argument )* )? RPAREN ( DBLDOT ( THIS | SUPER ) LPAREN ( WORD ( ',' WORD )* )? RPAREN )? BBLOCK code EBLOCK
            {
            match(input,PRIVACY,FOLLOW_PRIVACY_in_constructor535); if (state.failed) return ;
            match(input,THIS,FOLLOW_THIS_in_constructor537); if (state.failed) return ;
            match(input,LPAREN,FOLLOW_LPAREN_in_constructor539); if (state.failed) return ;
            // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:160:24: ( argument ( ',' argument )* )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==WORD||(LA9_0>=64 && LA9_0<=70)) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:160:25: argument ( ',' argument )*
                    {
                    pushFollow(FOLLOW_argument_in_constructor542);
                    argument();

                    state._fsp--;
                    if (state.failed) return ;
                    // /home/luis/NetBeansProjects/Sabre/Trunk/PineDL/src/org/gcreator/pinedl/PineDL.g:160:34: ( ',' argument )*
                    loop8:
                    do {
                        int alt8=2;
                        int LA8_0 = input.LA(1);

                        if ( (LA8_0==54) ) {
                            alt8=1;
                        }

